tests/regression/good/cartesianCase.gr
import Bool

foo : Bool |∞| -> Bool |1=|
foo x =
  case x of
     |False| -> |False|;
     |True| -> |True|
