tests/regression/illtyped/wild.gr
import Prelude
import Vect

isEmpty : forall (n : Nat=) . Vect n Int -> Bool
isEmpty xs =
    case xs of
      Nil        -> True;
      (Cons _ _) -> False
